--- a/public/css/style.css
+++ b/public/css/style.css
@@ -185,6 +185,52 @@ h3{
     margin-left: 20px;
 
 }
+
+nav{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0 20px;
+    background-color: #55b9c0;
+    color: #fff
+}
+
+nav ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.main-nav li,
+.user li {
+    margin: 0 10px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+}
+
+.main-nav li:first-child {
+    font-weight: bold;
+}
+
+.user img {
+    width: 30px;
+    border-radius: 90%;
+    margin-left: 10px;
+}
+
+h1,h2 {
+    font-weight: 400;
+}
+
+h1,
+main {
+    padding: 0 30px;
+}
+
 @media (max-width:420px){
 
 .atributoflex article{
@@ -231,5 +277,6 @@ header article{
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
 
 }
