Cambios en css de home y arrancando el FORMS

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -202,7 +202,7 @@ h3{
     justify-content: space-between;
     display: flex;
     flex-wrap: wrap;
-    
+
 }
 nav{
     display: flex;
@@ -251,7 +251,7 @@ main {
 /* Characters Container */
 .card-container {
     margin-top: 20px;
-    padding: 0 10px;
+    padding: 10px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -263,7 +263,7 @@ main {
     font-size: 20px;
     padding: 10px;
     margin-bottom: 20px;
-    width: 24%;
+    width: 20%;
     background: rgb(108, 125, 124);
     border-radius: 5px;
     box-shadow: 0 .15rem 1.75rem 0 rgba(58,59,69,.15);
