--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,13 +8,19 @@ body{
     font-size: 65px;
 
 }
+.Buscador{
+    margin-top: 20px;
+}
 .Header{
     font-size: 75px;
     background-image: url(./BackgroundIMG.webp);
     width: 100%;
+    height: 250px;
+    margin-top: 10px;
 }
 .Header h1{
     color: #fff;
+    margin-top: 10px;
 }
 img{
     width:100%;
