Boton de ver mas

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,25 @@ body{
 
     
     
+.Detalle{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
     
+}
+
+.DetalleDetail{
+    color: #777;
+    font-size: 20px;
+    padding: 10px;
+    margin-bottom: 20px;
+    margin-left: 15px;
+    margin-top: 5px;
+    width: 45%;
+    background: rgb(108, 125, 124);
+    border-radius: 10px;
+    box-shadow: 0 .15rem 1.75rem 0 rgba(58,59,69,.15);
+}
 
 
 .button-54 {
@@ -307,6 +325,7 @@ main {
     font-size: 20px;
     padding: 10px;
     margin-bottom: 20px;
+    margin-top: 5px;
     width: 20%;
     background: rgb(108, 125, 124);
     border-radius: 5px;
@@ -331,6 +350,13 @@ box-shadow: 0rem 0rem 10px 8px rgb(58 59 69 / 25%);
     color: white;
     list-style-type: none;
     text-decoration: none;
+}
+
+.hide {
+    display: none;
+}
+.show {
+    display: block;
 }
 
 @media (max-width:420px){
