--- a/public/css/style.css
+++ b/public/css/style.css
@@ -280,7 +280,12 @@ nav ul {
 }
 
 .main-nav {
-    gap: 12px
+    gap: 12px,
+}
+
+li a:hover {
+    color: black;
+    
 }
 
 .main-nav li,
@@ -329,7 +334,7 @@ main {
     width: 20%;
     background: rgb(108, 125, 124);
     border-radius: 5px;
-    box-shadow: 0 .15rem 1.75rem 0 rgba(58,59,69,.15);
+    box-shadow: 0 .15rem 1.75rem 0 rgba(58,59,69,.15);    
 }
 .character-card img{
     width: 100%;
