--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,8 +3,6 @@ body{
     font-family: 'Urbanist', sans-serif;
 
 }
-
-    
     
 .Detalle{
     display: flex;
@@ -42,6 +40,10 @@ body{
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
+  }
+
+  .radio-button{
+    color: white;
   }
   
   .button-54:active {
@@ -87,22 +89,6 @@ list-style-type: none;
    width: 20%;
 }
 
-.titulo{
-    text-align: center;
-    font-size: 50px;
-    color: white;
-}
-
-.genero{
-    list-style: none;
-    list-style-type: none;
-}
-
-.menu{
-    text-align: right;
-    font-size: 22px;
-    color: white;
-}
 
 header article{
     display:flex;
@@ -122,116 +108,18 @@ footer{
     text-decoration: none;
 }
 
-.atributoflex{
-    display: flex; 
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-.atributoflex2{
-    display: flex; 
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.atributoflex3{
-    display: flex; 
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.heart{
-    width: 20px;
-    
-}
-
-.atributoflex h1{
-    width: 100%;
-}
-
-.atributoflex article{
-    width: 18%;
-}
-
-.atributoflex2 h1{
-    width: 100%;
-}
-
-.atributoflex2 article{
-    width: 18%;
-}
-
-.atributoflex3 h1{
-    width: 100%;
-}
-
-.atributoflex3 article{
-    width: 18%;
-}
-
-.foto{
-    width: 90%;
-    min-height: 30vh;    
-}
-
-.generoletra{
-    font-size: 30px;
-    
-}
 
 section h2 {
     font-size: 28px;
 }
 
 
-.genrie{
-    padding-top: 65px;
-}
-
 .botonenviar{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
-.atributoflexdetail {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-.atributoflexdetail div img{
-    width: 30%;
-}
-.atributoflexdetail div li {
-    width: 50%;
-    flex-direction: row;
-}
 
-.atributoflexgenries h2{
-    width: 100%;
-}
-.atributoflexgenries article{
-    width:25%;
-}
-.atributoflexgenries {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.atributoflexgenries2 h2{
-    width: 100%;
-}
-.atributoflexgenries2 article{
-    width:25%;
-}
-.atributoflexgenries2 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.result-titulo{
-    width: 100%;
-}
 
 .peliculas_home {
     width: 18%;
@@ -242,19 +130,7 @@ section h2 {
     width: 100%;
     border-radius: 50%;
 }
-h3{
-    width: 100%;
-}
-.atributoflex2 h3{
-    width: 100%;
-}
 
-.logofooter img{
-    width: 100%;
-    margin-top: 20px;
-    margin-left: 20px;
-
-}
 .Navegador{
     color: #fff;
     justify-content: space-between;
@@ -315,7 +191,6 @@ h1,
 main {
     padding: 0 30px;
 }
-/* Characters Container */
 .card-container {
     margin-top: 20px;
     padding: 10px;
