boton ver mas ver menos areglado

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -232,10 +232,10 @@ box-shadow: 0rem 0rem 10px 8px rgb(58 59 69 / 25%);
     text-decoration: none;
 }
 
-.hide {
+.VerMas {
     display: none;
 }
-.show {
+.VerMenos{
     display: block;
 }
 
